Hacer funcional el juego con JS

--- a/base-juego-adivinanza-js-master/index.html
+++ b/base-juego-adivinanza-js-master/index.html
@@ -13,8 +13,9 @@
     <h1>Adivina el número</h1>
     <p>Introduce un número entre 1 y 100:</p>
     <input type="number" id="numeroEntrada">
-    <button >Comprobar</button>
-    <p id="mensaje"></p>
+    <button onclick="chequearResultado()">Comprobar</button>
+    <p id="mensaje">¡A Jugar!</p>
+    
 
     <script src="script.js"></script>
 </body>
