--- a/base-juego-adivinanza-js-master/index.html
+++ b/base-juego-adivinanza-js-master/index.html
@@ -15,7 +15,7 @@
     <input type="number" id="numeroEntrada">
     <button onclick="chequearResultado()">Comprobar</button>
     <p id="mensaje">¡A Jugar!</p>
-    
+    <h4>Cantidad de intentos: <p id='intento'>0</p></h4>
 
     <script src="script.js"></script>
 </body>
